@@ -476,7 +476,9 @@ function browseHandleListResponse(view, item, command, resp, prevPage, appendIte
                                               artist_id:artist_id});
                 }
                 if (showWorksInMenu) {
-                    lmsList('', ['works'], [view.current.id], 0, 1, false, view.nextReqId()).then(({data}) => {
+                    let command = {command:['works'], params:[view.current.id]};
+                    addParentParams(view.current, view.command, command, true);
+                    lmsList('', command.command, command.params, 0, 1, false, view.nextReqId()).then(({data}) => {
                         logJsonMessage("RESP", data);
                         if (!data || !data.result || !data.result.works_loop || data.result.works_loop.length<1) {
                             for (var i=0, loop=view.currentActions, len=loop.length; i<len; ++i) {
@@ -714,9 +716,10 @@ function browseAddWorks(view) {
     let orig = [];
     orig.push.apply(orig, view.items);
     view.items = [];
-    let params = [view.current.id];
-    browseAddLibId(view, params);
-    lmsList('', ['works'], params, 0, LMS_BATCH_SIZE, true, view.nextReqId()).then(({data}) => {
+    let command = {'command':['works'], params:[view.current.id]};
+    browseAddLibId(view, command.params);
+    addParentParams(view.current, view.command, command, true);
+    lmsList('', command.command, command.params, 0, LMS_BATCH_SIZE, true, view.nextReqId()).then(({data}) => {
         logJsonMessage("RESP", data);
         if (id==view.current.id) {
             var resp = parseBrowseResp(data, view.current, view.options);
