@@ -100,6 +100,37 @@ const STD_ITEMS=[
     }
 ];
 
+function addParentParams(item, parentCommand, command, isWorks) {
+    let roleIdPos = undefined;
+    let artistIdRemoved = false;
+    for (var i=0, len=parentCommand.params.length; i<len; ++i) {
+        if (typeof parentCommand.params[i] === 'string' || parentCommand.params[i] instanceof String) {
+            var lower = parentCommand.params[i].toLowerCase();
+            if (lower.startsWith("artist_id:") && !isWorks) {
+                if (lmsOptions.noArtistFilter && (item.compilation || item.nonmain)) {
+                    // Want all tracks from an album, not just those from this artist, so don't filter on artist_id
+                    command.params.push('material_skin_'+parentCommand.params[i]);
+                    artistIdRemoved = true;
+                } else {
+                    // Retrict to only tracks from this artist
+                    command.params.push(parentCommand.params[i]);
+                }
+            } else if (!LMS_NO_ROLE_FILTER && lower.startsWith("role_id:")) {
+                roleIdPos = command.params.length;
+                command.params.push(parentCommand.params[i]);
+            } else if (!LMS_NO_GENRE_FILTER && lower.startsWith("genre_id:")) {
+                command.params.push(parentCommand.params[i]);
+            } else if (lower.startsWith("work_id:") || lower.startsWith("performance:")) {
+                command.params.push(parentCommand.params[i]);
+            }
+        }
+    }
+    // If we're not supplying artist_id then can't supply role_id
+    if (artistIdRemoved && undefined!=roleIdPos) {
+        command.params.splice(roleIdPos, 1);
+    }
+}
+
 function buildStdItemCommand(item, parentCommand) {
     var command={command:[], params:[]};
     if (undefined==item) {
@@ -161,34 +192,7 @@ function buildStdItemCommand(item, parentCommand) {
                 }
             }
         } else if (item.id.startsWith("album_id:")) {
-            let roleIdPos = undefined;
-            let artistIdRemoved = false;
-            for (var i=0, len=parentCommand.params.length; i<len; ++i) {
-                if (typeof parentCommand.params[i] === 'string' || parentCommand.params[i] instanceof String) {
-                    var lower = parentCommand.params[i].toLowerCase();
-                    if (lower.startsWith("artist_id:")) {
-                        if (lmsOptions.noArtistFilter && (item.compilation || item.nonmain)) {
-                            // Want all tracks from an album, not just those from this artist, so don't filter on artist_id
-                            command.params.push('material_skin_'+parentCommand.params[i]);
-                            artistIdRemoved = true;
-                        } else {
-                            // Retrict to only tracks from this artist
-                            command.params.push(parentCommand.params[i]);
-                        }
-                    } else if (!LMS_NO_ROLE_FILTER && lower.startsWith("role_id:")) {
-                        roleIdPos = command.params.length;
-                        command.params.push(parentCommand.params[i]);
-                    } else if (!LMS_NO_GENRE_FILTER && lower.startsWith("genre_id:")) {
-                        command.params.push(parentCommand.params[i]);
-                    } else if (lower.startsWith("work_id:") || lower.startsWith("performance:")) {
-                        command.params.push(parentCommand.params[i]);
-                    }
-                }
-            }
-            // If we're not supplying artist_id then can't supply role_id
-            if (artistIdRemoved && undefined!=roleIdPos) {
-                command.params.splice(roleIdPos, 1);
-            }
+            addParentParams(item, parentCommand, command);
             if (undefined!=item.performance) {
                 command.params.push("performance:"+item.performance);
             } else {
@@ -213,6 +217,7 @@ function buildStdItemCommand(item, parentCommand) {
             if (undefined!=item.album_id) {
                 command.params.push("album_id:"+item.album_id);
             }
+            addParentParams(item, parentCommand, command, true);
         }
     }
     return command;
